tls-traefik/host-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-d9p
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

  namespace: infrastructure

spec:
  ingressClassName: traefik-lb
  rules:
    - host: bar.d9p.io
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  number: 80
            pathType: Prefix
            path: /
  tls:
    - secretName: d9p-tls
